--- a/Views/SubscriptionGroups/AddNewUser.cshtml
+++ b/Views/SubscriptionGroups/AddNewUser.cshtml
@@ -1,4 +1,4 @@
-﻿@model eComm_Reporting_Application.Models.SubscriptionGroupsModel
+﻿@model eComm_Reporting_Application.Models.UserSubscriptionDropdownModel
 
 @{
     ViewData["Title"] = "Add New User";
