--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -15,7 +15,7 @@
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3 site-header">
             <div class="top-bar container">
-                <img class ="tjx-icon" src="@Url.Content("~/Images/TJX_IT.png")"/>
+                <img class="tjx-icon" src="@Url.Content("~/Images/TJX_IT.png")" />
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -23,13 +23,13 @@
                 <div class="navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse">
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
-                            <a class="nav-link text-dark nav-option navbarOption" asp-area="" asp-controller="SubscriptionGroups" asp-action="Index">User Subscription Groups</a>
+                            <a id="SubscriptionGroups_Link" class="nav-link text-dark nav-option navbarOption" asp-area="" asp-controller="SubscriptionGroups" asp-action="Index">User Subscription Groups</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark nav-option navbarOption" asp-area="" asp-controller="MarMaxxReports" asp-action="Index">MarMaxx Reports Subscriptions</a>
+                            <a id="MarMaxxReports_Link" class="nav-link text-dark nav-option navbarOption" asp-area="" asp-controller="MarMaxxReports" asp-action="Index">MarMaxx Reports Subscriptions</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark nav-option navbarOption" asp-area="" asp-controller="SierraReports" asp-action="Index">Sierra Reports Subscriptions</a>
+                            <a id="SierraReports_Link" class="nav-link text-dark nav-option navbarOption" asp-area="" asp-controller="SierraReports" asp-action="Index">Sierra Reports Subscriptions</a>
                         </li>
                     </ul>
                 </div>
