Fixing navbar hover issues

--- a/Views/SierraReports/Index.cshtml
+++ b/Views/SierraReports/Index.cshtml
@@ -1,6 +1,10 @@
 ﻿@{
     ViewData["Title"] = "Sierra Reports Subscriptions";
 }
+@section Scripts{
+    <script src="~/js/sierraReports.js"></script>
+}
+<link rel="stylesheet" href="~/css/sierraReports.css" />
 
 <div class="page-header">
     <div class="page-title">
