Disabling and enabling report name dropdown when value is selected/not selected

--- a/Views/MarMaxxReports/Index.cshtml
+++ b/Views/MarMaxxReports/Index.cshtml
@@ -20,8 +20,8 @@
     
     <div class="first-row">
         <div class="main-dropdown">
-            <label class="filter-label" for="marMaxxFolderDropdown">Filter:</label>
-            <select id="marMaxxFolderDropdown" name="marMaxxFolderDropdown" multiple>
+            <label class="filter-label" for="marMaxxFolderDropdown">Folder:</label>
+            <select id="marMaxxFolderDropdown" name="marMaxxFolderDropdown" onchange="selectedFolder();" multiple>
                 @foreach (var folder in @Model.folderList)
                 {
                     <option value=@folder> @folder </option>
