Adding add new report subscription page to MarMaxx

--- a/Views/MarMaxxReports/Index.cshtml
+++ b/Views/MarMaxxReports/Index.cshtml
@@ -12,7 +12,7 @@
 
 <div class="page-header">
     <div class="page-title">
-        <h1 class="title-text">MarMaxx Reports Subscriptions</h1>
+        <h1 class="title-text">MarMaxx Report Subscriptions</h1>
     </div>
 </div>
 
@@ -39,6 +39,11 @@
 </div>
 
 <div class="separator-line">
+</div>
+
+<div class="addNew">
+    <h4 class="addNewText">Add New Subscription</h4>
+    <button id="addNewBtn" class="addNewBtn"><i class="fas fa-plus-circle" onclick="location.href='@Url.Action("AddNewReportSub", "MarMaxxReports")'"></i></button>
 </div>
 
 <button id="btnSubmitUser" class="btnSubmit" type="button">Submit</button>
