--- a/Views/SubscriptionGroups/Index.cshtml
+++ b/Views/SubscriptionGroups/Index.cshtml
@@ -60,9 +60,9 @@
 <div class="separator-line">
 </div>
 
-<div class="addNewUserSubscription">
+<div class="addNew">
     <h4 class="addNewText">Add New User</h4>
-    <button id="addNewBtn" class="addNewBtn"><i class="fas fa-plus-circle" onclick="location.href='@Url.Action("AddNewUser", "SubscriptionGroups")'"></i></button>
+    <button id="addNewBtn" class="addNewBtn"><i class="fas fa-plus-circle" onclick="location.href='@Url.Action("AddNewUserSub", "SubscriptionGroups")'"></i></button>
 </div>
 
 <div id="userSubscriptionData">
