--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -248,3 +248,34 @@ body {
 .nav-item a:hover {
     color: #9E0000 !important;
 }
+
+.addNew {
+    float: right;
+    margin-top: 50px;
+    display: inline-block;
+    margin-bottom: 10px;
+    margin-right: -8px;
+}
+.addNewText {
+    float: left;
+    margin-right: 7px;
+    line-height: 48px;
+    color: #9E0000;
+    font-weight: 700;
+}
+
+.addNewBtn {
+    float: left;
+    border: none;
+    background: white;
+}
+
+    .addNewBtn:focus {
+        outline: none;
+        transform: rotate(45deg);
+    }
+
+.fa-plus-circle {
+    font-size: 3em;
+    color: #9E0000;
+}
