--- a/wwwroot/css/addNewUser.css
+++ b/wwwroot/css/addNewUser.css
@@ -1,22 +1,4 @@
-﻿.groupID {
-    width: 400px;
-    padding: 8px 0;
-    float: left;
-}
-
-.group {
-    width: 400px;
-    padding: 8px 0;
-    float: left;
-}
-
-.master-group {
-    width: 400px;
-    padding: 8px 0;
-    float: left;
-}
-
-.btn-group{
+﻿.btn-group{
     float: right;
 }
 
@@ -25,18 +7,6 @@
     height: 38px;
     padding: 14px 0;
     float: left;
-}
-
-.addnew-row {
-    width: 92%;
-    display: inline-block;
-    margin-top: 10px;
-}
-
-.addnew-row-last {
-    width: 92%;
-    display: inline-block;
-    margin-top: 20px;
 }
 
 .email-input {
@@ -48,7 +18,10 @@
         width: 290px;
     }
     .radio-btns {
-        margin-left: 46px;
+        margin-left: 65px;
+    }
+    #addUserSubmit {
+        margin-left: 130px;
     }
 }
 
@@ -57,37 +30,20 @@
         width: 250px;
     }
     .radio-btns {
-        margin-left: 85px;
+        margin-left: 105px;
+    }
+    #addUserSubmit {
+        margin-left: 141px;
     }
 }
-
-.btnAddUserPage {
-    float: left;
-    margin-right: 2.5%;
-    width: 100px;
-    border: none;
-    border-radius: 8px;
-    box-shadow: 0 5px #999;
-    font-weight: 500;
-}
-
-    .btnAddUserPage:active {
-        box-shadow: 0 2px #666;
-        transform: translateY(4px);
-    }
-
-    .btnAddUserPage:focus {
-        outline: none;
-    }
 
 #addUserSubmit {
     width: 150px;
-    margin-left: 130px;
     background-color: #9E0000;
     color: white;
     font-weight: 700;
 }
 
 .email{
-    width: 400px;
+    width: 420px;
 }
