--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -279,3 +279,40 @@ body {
     font-size: 3em;
     color: #9E0000;
 }
+
+.addnew-dropdown {
+    width: 420px;
+    padding: 8px 0;
+    float: left;
+}
+
+.addnew-row {
+    width: 92%;
+    display: inline-block;
+    margin-top: 10px;
+}
+
+.addnew-row-last {
+    width: 92%;
+    display: inline-block;
+    margin-top: 20px;
+}
+
+.btnAddPage {
+    float: left;
+    margin-right: 2.5%;
+    width: 100px;
+    border: none;
+    border-radius: 8px;
+    box-shadow: 0 5px #999;
+    font-weight: 500;
+}
+
+    .btnAddPage:active {
+        box-shadow: 0 2px #666;
+        transform: translateY(4px);
+    }
+
+    .btnAddPage:focus {
+        outline: none;
+    }
