Only letting user select one report for MarMaxx Reports screen

--- a/Views/MarMaxxReports/Index.cshtml
+++ b/Views/MarMaxxReports/Index.cshtml
@@ -30,7 +30,7 @@
         </div>
         <div class="main-dropdown">
             <label class="filter-label" for="marMaxxReportDropdown">Report Name:</label>
-            <select id="marMaxxReportDropdown" name="marMaxxReportDropdown" multiple>
+            <select id="marMaxxReportDropdown" name="marMaxxReportDropdown">
             </select>
         </div>
     </div>
