--- a/Views/MarMaxxReports/AddNewReportSub.cshtml
+++ b/Views/MarMaxxReports/AddNewReportSub.cshtml
@@ -30,7 +30,7 @@
     <div class="addnew-row">
         <div class="addnew-dropdown">
             <label class="filter-label" for="marMaxxReportDropdown">Report Name:</label>
-            <select id="marMaxxReportDropdown" name="marMaxxReportDropdown" multiple>
+            <select id="marMaxxReportDropdown" name="marMaxxReportDropdown">
             </select>
         </div>
     </div>
