Displaying MarMaxx Report Subscriptions Table

--- a/Views/MarMaxxReports/Index.cshtml
+++ b/Views/MarMaxxReports/Index.cshtml
@@ -46,4 +46,7 @@
     <button id="addNewBtn" class="addNewBtn"><i class="fas fa-plus-circle" onclick="location.href='@Url.Action("AddNewReportSub", "MarMaxxReports")'"></i></button>
 </div>
 
+<div id="marMaxxSubscriptionData">
+</div>
+
 <button id="btnSubmitUser" class="btnSubmit" type="button">Submit</button>
