--- a/wwwroot/css/addNewMarMaxxReport.css
+++ b/wwwroot/css/addNewMarMaxxReport.css
@@ -1,3 +1,22 @@
 ﻿.btn-group {
     float: right;
 }
+
+#viewReportParams {
+    width: 200px;
+    background-color: #9E0000;
+    color: white;
+    font-weight: 700;
+}
+
+@media screen and (max-width: 1920px) {
+    #viewReportParams {
+        margin-left: 78px;
+    }
+}
+
+@media screen and (max-width: 1280px) {
+    #viewReportParams {
+        margin-left: 94px;
+    }
+}
