--- a/Views/MarMaxxReports/AddNewReportSub.cshtml
+++ b/Views/MarMaxxReports/AddNewReportSub.cshtml
@@ -1,4 +1,4 @@
-﻿@model eComm_Reporting_Application.Models.ReportPageDropdownModel
+﻿@model eComm_Reporting_Application.Models.AddNewReportSubDropdownModel
 @{
     ViewData["Title"] = "Add New Report Subscription";
 }
@@ -15,6 +15,39 @@
 </div>
 
 <div class="filter-data">
+    <div class="addnew-row textbox">
+        <div class="sub-name">
+            <label class="filter-label" for="subscription-name">Subscription Name: </label>
+            <input type="text" id="subscriptionName" class="subscription-name" name="subscription-name" />
+        </div>
+    </div>
+
+    <div class="addnew-row">
+        <div class="addnew-dropdown">
+            <label class="filter-label" for="marMaxxGroupID">Group ID:</label>
+            <select id="marMaxxGroupID" name="marMaxxGroupID">
+                <option value="" disabled selected>Select a group ID...</option>
+                @foreach (var groupID in @Model.groupIDs)
+                {
+                    <option value=@groupID> @groupID </option>
+                }
+            </select>
+        </div>
+    </div>
+
+    <div class="addnew-row">
+        <div class="addnew-dropdown">
+            <label class="filter-label" for="marMaxxGroupName">Group Name:</label>
+            <select id="marMaxxGroupName" name="marMaxxGroupName">
+                <option value="" disabled selected>Select a group...</option>
+                @foreach (var groupName in @Model.groupNames)
+                {
+                    <option value=@groupName> @groupName </option>
+                }
+            </select>
+        </div>
+    </div>
+
     <div class="addnew-row">
         <div class="addnew-dropdown">
             <label class="filter-label" for="marMaxxFolderDropdown">Folder:</label>
