Dropdowns show on screen dynamically

--- a/Views/MarMaxxReports/AddNewReportSub.cshtml
+++ b/Views/MarMaxxReports/AddNewReportSub.cshtml
@@ -72,6 +72,14 @@
         <button id="backToMarMaxx" class="btnAddPage" type="button" onclick="location.href='@Url.Action("Index", "MarMaxxReports")'">Back</button>
         <button id="viewReportParams" class="btnAddPage" type="button">View Report Parameters</button>
     </div>
+</div>
 
+<div id="dynamicParams" class="dynamic-params">
+    @*<div class="addnew-row">
+        <div class="sub-name">
+            <label class="filter-label" for="subscription-name">Subscription Name: </label>
+            <input type="text" id="subscriptionName" class="subscription-name" name="subscription-name" />
+        </div>
+    </div>*@
 </div>
 
