Textboxes show dynamically, added scrollable Div

--- a/Views/MarMaxxReports/AddNewReportSub.cshtml
+++ b/Views/MarMaxxReports/AddNewReportSub.cshtml
@@ -16,9 +16,9 @@
 
 <div class="filter-data">
     <div class="addnew-row textbox">
-        <div class="sub-name">
+        <div class="addnew-textbox">
             <label class="filter-label" for="subscription-name">Subscription Name: </label>
-            <input type="text" id="subscriptionName" class="subscription-name" name="subscription-name" />
+            <input type="text" id="subscriptionName" class="subscription-textbox" name="subscription-name" />
         </div>
     </div>
 
@@ -74,12 +74,9 @@
     </div>
 </div>
 
+<div class="separator-vertical">
+</div>
+
 <div id="dynamicParams" class="dynamic-params">
-    @*<div class="addnew-row">
-        <div class="sub-name">
-            <label class="filter-label" for="subscription-name">Subscription Name: </label>
-            <input type="text" id="subscriptionName" class="subscription-name" name="subscription-name" />
-        </div>
-    </div>*@
 </div>
 
