Dynamically Adding Save Report Subscription Button

--- a/Views/MarMaxxReports/AddNewReportSub.cshtml
+++ b/Views/MarMaxxReports/AddNewReportSub.cshtml
@@ -74,9 +74,11 @@
     </div>
 </div>
 
-<div class="separator-vertical">
-</div>
+<div id="addNewDynamic" class="dynamic-div">
+    <div id="dynamicParams" class="dynamic-params">
+    </div>
 
-<div id="dynamicParams" class="dynamic-params">
+    <div id="saveSubscription" class="save-subscription">
+    </div>
 </div>
 
