Dynamic parameters display values in the table on the main page

--- a/wwwroot/css/marMaxxReports.css
+++ b/wwwroot/css/marMaxxReports.css
@@ -49,6 +49,6 @@
     z-index: 10;
 }
 
-.marMaxxSubscriptionsEntry_SubscriptionID, .marMaxxSubscriptionsEntry_SubscriptionName, .marMaxxSubscriptionsEntry_ReportName, .marMaxxSubscriptionsEntry_GroupName, .marMaxxSubscriptionsEntry_GroupID {
+.marMaxxSubscriptionsEntry_SubscriptionID, .marMaxxSubscriptionsEntry_SubscriptionName, .marMaxxSubscriptionsEntry_ReportName, .marMaxxSubscriptionsEntry_GroupName, .marMaxxSubscriptionsEntry_GroupID, .marMaxxSubscriptionEntry_Dynamic {
     text-align: center;
 }
