Delete buttons added to MarMaxx Subscription Table

--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -316,3 +316,13 @@ body {
     .btnAddPage:focus {
         outline: none;
     }
+
+.deleteBtn {
+    border: none;
+    background: white;
+    margin-left: 1px;
+}
+
+.fa-trash {
+    color: #9E0000;
+}
