--- a/Views/MarMaxxReports/AddNewReportSub.cshtml
+++ b/Views/MarMaxxReports/AddNewReportSub.cshtml
@@ -15,39 +15,6 @@
 </div>
 
 <div class="filter-data">
-    <div class="addnew-row textbox">
-        <div class="addnew-textbox">
-            <label class="filter-label" for="subscription-name">Subscription Name: </label>
-            <input type="text" id="subscriptionName" class="subscription-textbox" name="subscription-name" />
-        </div>
-    </div>
-
-    <div class="addnew-row">
-        <div class="addnew-dropdown">
-            <label class="filter-label" for="marMaxxGroupID">Group ID:</label>
-            <select id="marMaxxGroupID" name="marMaxxGroupID">
-                <option value="" disabled selected>Select a group ID...</option>
-                @foreach (var groupID in @Model.groupIDs)
-                {
-                    <option value=@groupID> @groupID </option>
-                }
-            </select>
-        </div>
-    </div>
-
-    <div class="addnew-row">
-        <div class="addnew-dropdown">
-            <label class="filter-label" for="marMaxxGroupName">Group Name:</label>
-            <select id="marMaxxGroupName" name="marMaxxGroupName">
-                <option value="" disabled selected>Select a group...</option>
-                @foreach (var groupName in @Model.groupNames)
-                {
-                    <option value=@groupName> @groupName </option>
-                }
-            </select>
-        </div>
-    </div>
-
     <div class="addnew-row">
         <div class="addnew-dropdown">
             <label class="filter-label" for="marMaxxFolderDropdown">Folder:</label>
@@ -75,8 +42,48 @@
 </div>
 
 <div id="addNewDynamic" class="dynamic-div">
-    <div id="dynamicParams" class="dynamic-params">
+    <div class="dynamic-params-div">
+
+        <div id="staticParams">
+            <div class="addnew-row textbox">
+                <div class="addnew-textbox">
+                    <label class="filter-label" for="subscription-name">Subscription Name: </label>
+                    <input type="text" id="subscriptionName" class="subscription-textbox" name="subscription-name" />
+                </div>
+            </div>
+
+            <div class="addnew-row">
+                <div class="addnew-dropdown">
+                    <label class="filter-label" for="marMaxxGroupID">Group ID:</label>
+                    <select id="marMaxxGroupID" name="marMaxxGroupID">
+                        <option value="" disabled selected>Select a group ID...</option>
+                        @foreach (var groupID in @Model.groupIDs)
+                        {
+                            <option value=@groupID> @groupID </option>
+                        }
+                    </select>
+                </div>
+            </div>
+
+            <div class="addnew-row">
+                <div class="addnew-dropdown">
+                    <label class="filter-label" for="marMaxxGroupName">Group Name:</label>
+                    <select id="marMaxxGroupName" name="marMaxxGroupName">
+                        <option value="" disabled selected>Select a group...</option>
+                        @foreach (var groupName in @Model.groupNames)
+                        {
+                            <option value=@groupName> @groupName </option>
+                        }
+                    </select>
+                </div>
+            </div>
+        </div>
+
+        <div id="dynamicParams">
+
+        </div>
     </div>
+    
 
     <div id="saveSubscription" class="save-subscription">
     </div>
