--- a/wwwroot/css/addNewMarMaxxReport.css
+++ b/wwwroot/css/addNewMarMaxxReport.css
@@ -33,8 +33,8 @@
     #viewReportParams {
         margin-left: 124px;
     }
-    .dynamic-params {
-        max-height: 630px;  
+    .dynamic-params-div {
+        max-height: 620px;
     }
     .dynamic-div {
         width: 610px;
@@ -55,8 +55,8 @@
     #viewReportParams {
         margin-left: 126px;
     }
-    .dynamic-params {
-        max-height: 297px;
+    .dynamic-params-div {
+        max-height: 288px;
     }
     .dynamic-div {
         width: 555px;
@@ -85,19 +85,14 @@
     float: left;
 }
 
-.dynamic-params {
+.dynamic-params-div {
     overflow-y: scroll;
-    min-height: 240px;
     width: 100%;
 }
 
 .dynamic-div {
-    margin-top: 12px;
+    margin-top: 21px;
     display: inline-block;
-}
-
-.first-row-dropdown {
-    margin-top: 0px;
 }
 
 .multiselect-container{
