--- a/Views/MarMaxxReports/AddNewReportSub.cshtml
+++ b/Views/MarMaxxReports/AddNewReportSub.cshtml
@@ -55,8 +55,7 @@
             <div class="addnew-row">
                 <div class="addnew-dropdown">
                     <label class="filter-label" for="marMaxxGroupID">Group ID:</label>
-                    <select id="marMaxxGroupID" name="marMaxxGroupID">
-                        <option value="" disabled selected>Select a group ID...</option>
+                    <select id="marMaxxGroupID" name="marMaxxGroupID" multiple>
                         @foreach (var groupID in @Model.groupIDs)
                         {
                             <option value=@groupID> @groupID </option>
@@ -68,8 +67,7 @@
             <div class="addnew-row">
                 <div class="addnew-dropdown">
                     <label class="filter-label" for="marMaxxGroupName">Group Name:</label>
-                    <select id="marMaxxGroupName" name="marMaxxGroupName">
-                        <option value="" disabled selected>Select a group...</option>
+                    <select id="marMaxxGroupName" name="marMaxxGroupName" multiple>
                         @foreach (var groupName in @Model.groupNames)
                         {
                             <option value=@groupName> @groupName </option>
