Removing content editable and adding edit icons

--- a/wwwroot/css/marMaxxReports.css
+++ b/wwwroot/css/marMaxxReports.css
@@ -52,3 +52,7 @@
 .marMaxxSubscriptionsEntry_SubscriptionID, .marMaxxSubscriptionsEntry_SubscriptionName, .marMaxxSubscriptionsEntry_ReportName, .marMaxxSubscriptionsEntry_GroupName, .marMaxxSubscriptionsEntry_GroupID, .marMaxxSubscriptionEntry_Dynamic {
     text-align: center;
 }
+
+.marMaxxSubscriptionsEntry_Icon{
+    min-width: 60px;
+}
