--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -323,6 +323,12 @@ body {
     margin-left: 1px;
 }
 
+.editBtn {
+    border: none;
+    background: white;
+    margin-left: 1px;
+}
+
 .fa-trash {
     color: #9E0000;
 }
