Edit screen has elements that populate with data. Need to finish group name and group ID

--- a/wwwroot/css/editMarMaxxReport.css
+++ b/wwwroot/css/editMarMaxxReport.css
@@ -1,1 +1,23 @@
-﻿
+﻿.filter-data {
+    float: left;
+}
+
+.addnew-dropdown {
+    width: 440px;
+}
+
+.btn-group {
+    float: right;
+}
+
+@media screen and (max-width: 1920px) {
+    .filter-data {
+        width: 35%;
+    }
+}
+
+@media screen and (max-width: 1280px) {
+    .filter-data {
+        width: 45%;
+    }
+}
