--- a/Views/MarMaxxReports/EditReportSub.cshtml
+++ b/Views/MarMaxxReports/EditReportSub.cshtml
@@ -1,4 +1,4 @@
-﻿@model eComm_Reporting_Application.Models.AddNewReportSubDropdownModel
+﻿@model eComm_Reporting_Application.Models.EditReportSubscriptionModel
 @{
     ViewData["Title"] = "Edit Report Subscription";
 }
@@ -15,10 +15,59 @@
 </div>
 
 <div class="filter-data">
+    <div class="addnew-row textbox">
+        <div class="addnew-textbox">
+            <label class="filter-label" for="subscription-id">Subscription ID: </label>
+            <input type="text" id="subscriptionID" class="subscription-textbox" name="subscription-id" disabled value="@Model.subscriptionID"/>
+        </div>
+    </div>
+
+    <div class="addnew-row textbox">
+        <div class="addnew-textbox">
+            <label class="filter-label" for="subscription-name">Subscription Name: </label>
+            <input type="text" id="subscriptionName" class="subscription-textbox" name="subscription-name" value="@Model.subscriptionName"/>
+        </div>
+    </div>
+
+    <div class="addnew-row">
+        <div class="addnew-dropdown">
+            <label class="filter-label" for="marMaxxReportName">Report Name:</label>
+            <select id="marMaxxReportName" name="marMaxxReportName" disabled>
+                <option value="@Model.reportName" disabled selected>@Model.reportName</option>
+            </select>
+        </div>
+    </div>
+
+    <div class="addnew-row">
+        <div class="addnew-dropdown">
+            <label class="filter-label" for="marMaxxGroupName">Group Name:</label>
+            <select id="marMaxxGroupName" name="marMaxxReportName" multiple>
+                @foreach (var groupName in @Model.groupNames)
+                {
+                    <option value=@groupName> @groupName </option>
+                }
+            </select>
+        </div>
+    </div>
+
+    <div class="addnew-row">
+        <div class="addnew-dropdown">
+            <label class="filter-label" for="marMaxxGroupID">Group ID:</label>
+            <select id="marMaxxGroupID" name="marMaxxGroupID" multiple>
+                @foreach (var groupID in @Model.groupIDs)
+                {
+                    <option value=@groupID> @groupID </option>
+                }
+            </select>
+        </div>
+    </div>
+
+
+
+    <div id="dynamicParams">
+    </div>
 </div>
 
 <div id="hiddenParamNames">
 </div>
 
-<div id="hiddenSelectedReport">
-</div>
