--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -332,3 +332,27 @@ body {
 .fa-trash {
     color: #9E0000;
 }
+
+@media screen and (max-width: 1920px) {
+    .subscription-textbox {
+        width: 290px;
+    }
+}
+
+@media screen and (max-width: 1280px) {
+    .subscription-textbox {
+        width: 250px;
+    }
+}
+
+.addnew-textbox {
+    width: 440px;
+}
+
+.textbox {
+    margin-bottom: 10px;
+}
+
+.subscription-textbox {
+    float: right;
+}
