--- a/Views/MarMaxxReports/EditReportSub.cshtml
+++ b/Views/MarMaxxReports/EditReportSub.cshtml
@@ -37,14 +37,14 @@
     <div class="addnew-row textbox">
         <div class="addnew-textbox">
             <label class="filter-label" for="subscription-id">Subscription ID: </label>
-            <input type="text" id="subscriptionID" class="subscription-textbox" name="subscription-id" disabled value="@Model.subscriptionID"/>
+            <input type="text" id="subscriptionID" class="subscription-textbox" name="subscription-id" disabled value="@Model.subscriptionID" />
         </div>
     </div>
 
     <div class="addnew-row textbox">
         <div class="addnew-textbox">
             <label class="filter-label" for="subscription-name">Subscription Name: </label>
-            <input type="text" id="subscriptionName" class="subscription-textbox" name="subscription-name" value="@Model.subscriptionName"/>
+            <input type="text" id="subscriptionName" class="subscription-textbox" name="subscription-name" value="@Model.subscriptionName" />
         </div>
     </div>
 
@@ -86,6 +86,8 @@
     <div class="dynamic-params-div">
         <div id="dynamicParams">
         </div>
+    </div>
+    <div id="saveSubscription" class="save-subscription">
     </div>
 </div>
 
