--- a/Views/MarMaxxReports/EditReportSub.cshtml
+++ b/Views/MarMaxxReports/EditReportSub.cshtml
@@ -33,6 +33,9 @@
     @Html.HiddenFor(selectedFolderName => Model.folderName)
 </div>
 
+<div id="hiddenParamNames">
+</div>
+
 <div class="filter-data">
     <div class="addnew-row textbox">
         <div class="addnew-textbox">
