--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -150,7 +150,7 @@ body {
     width: 100%;
     height: 0px;
     left: 0px;
-    top: 238px;
+    top: 232px;
     border: 2px solid #BDBDBD;
     box-shadow: 0px 2px 2px rgb(0 0 0 / 25%);
 }
@@ -180,6 +180,10 @@ body {
 .first-row {
     width: 100%;
     display: inline-block;
+}
+
+.second-row{
+    width: 92%;
 }
 
 .btnViewData {
@@ -251,11 +255,12 @@ body {
 
 .addNew {
     float: right;
-    margin-top: 50px;
+    margin-top: 40px;
     display: inline-block;
     margin-bottom: 10px;
-    margin-right: -8px;
+    margin-right: -20px;
 }
+
 .addNewText {
     float: left;
     margin-right: 7px;
