Adding back button to edit report subscription screen

--- a/Views/MarMaxxReports/EditReportSub.cshtml
+++ b/Views/MarMaxxReports/EditReportSub.cshtml
@@ -90,6 +90,7 @@
         <div id="dynamicParams">
         </div>
     </div>
+    <button id="backToMarMaxx" class="btnAddPage" type="button" onclick="location.href='@Url.Action("Index", "MarMaxxReports")'">Back</button>
     <div id="saveSubscription" class="save-subscription">
     </div>
 </div>
