--- a/Views/SubscriptionGroups/AddNewUserSub.cshtml
+++ b/Views/SubscriptionGroups/AddNewUserSub.cshtml
@@ -39,12 +39,11 @@
 
     <div class="addnew-row">
         <div class="addnew-dropdown">
-            <label class="filter-label" for="groupIDDropdown">Group ID:</label>
-            <select id="addNew_groupIDDropdown" name="groupIDDropdown" class="add-new-dropdown">
-                <option value="" disabled selected>Select a group ID...</option>
-                @foreach (var groupID in @Model.groupsIDList)
+            <label class="filter-label" for="masterGroupDropdown">Master Group:</label>
+            <select id="addNew_masterGroupDropdown" name="masterGroupDropdown" class="add-new-dropdown" onchange="selectedMasterGroup();" multiple>
+                @foreach (var master_group in @Model.masterGroupsList)
                 {
-                    <option value=@groupID> @groupID </option>
+                    <option value=@master_group> @master_group </option>
                 }
             </select>
         </div>
@@ -53,28 +52,11 @@
     <div class="addnew-row">
         <div class="addnew-dropdown">
             <label class="filter-label" for="groupDropdown">Group:</label>
-            <select id="addNew_groupDropdown" name="groupDropdown" class="add-new-dropdown">
-                <option value="" disabled selected>Select a group...</option>
-                @foreach (var group in @Model.groupsList)
-                {
-                    <option value=@group> @group </option>
-                }
+            <select id="addNew_groupDropdown" name="groupDropdown" class="add-new-dropdown" multiple disabled>
             </select>
         </div>
     </div>
 
-    <div class="addnew-row">
-        <div class="addnew-dropdown">
-            <label class="filter-label" for="masterGroupDropdown">Master Group:</label>
-            <select id="addNew_masterGroupDropdown" name="masterGroupDropdown" class="add-new-dropdown">
-                <option value="" disabled selected>Select a master group...</option>
-                @foreach (var master_group in @Model.masterGroupsList)
-                {
-                    <option value=@master_group> @master_group </option>
-                }
-            </select>
-        </div>
-    </div>
     <div class="addnew-row-last">
         <button id="backToUsers" class="btnAddPage" type="button" onclick="location.href='@Url.Action("Index", "SubscriptionGroups")'">Back</button>
         <button id="addUserSubmit" class="btnAddPage" type="button">Submit User</button>
