--- a/wwwroot/css/userSubscriptions.css
+++ b/wwwroot/css/userSubscriptions.css
@@ -5,12 +5,23 @@
 }
 
 #userSubscriptionData {
-    margin-top: 100px;
+    margin-top: 0px;
     display: block;
     margin-left: auto;
     margin-right: auto;
     width: 93%;
     margin-bottom: 45px;
+}
+
+#userSubscriptionsTable_filter {
+    float: left;
+    margin-left: 45px;
+    line-height: 1.34;
+    margin-top: -40px;
+}
+
+#userSubscriptionsTable_length {
+   margin-top: -40px;
 }
 
 .userSubscriptionsTable {
@@ -59,6 +70,7 @@
 
 .addNew {
     margin-top: 75px;
+    margin-bottom: 4px;
 }
 
 .btnViewData {
