Pulling all necessary data for edit user

--- a/Views/SubscriptionGroups/EditUserSub.cshtml
+++ b/Views/SubscriptionGroups/EditUserSub.cshtml
@@ -19,7 +19,7 @@
 
 <div class="filter-data">
     <div class="addnew-row textbox">
-        <div class="addnew-textbox">
+        <div class="email">
             <label class="filter-label" for="subscription-id">User ID: </label>
             <input type="text" id="editUserEmail" class="email-input" name="email-id" disabled value="@Model.ID" />
         </div>
@@ -28,7 +28,7 @@
     <div class="addnew-row">
         <div class="email">
             <label class="filter-label" for="email-input">Email: </label>
-            <input type="text" id="editNew_UserEmail" class="email-input" name="email-input" />
+            <input type="text" id="editNew_UserEmail" class="email-input" name="email-input" value="@Model.userEmail"/>
         </div>
     </div>
 
